<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iv_background"
    tools:context=".ui.instruction.SelfieInstructionActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:autoSizeMaxTextSize="32sp"
                android:autoSizeMinTextSize="14sp"
                android:autoSizeTextType="uniform"
                android:text="@string/selfie_instruction"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:autoSizeStepGranularity="4sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_panduan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/blue"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/self_instruction_1"
                        android:textColor="@color/white" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/self_instruction_2"
                        android:textColor="@color/white" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/self_instruction_3"
                        android:textColor="@color/white" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_model"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/iv_model"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_close_mask"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/iv_close_mask" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_mask"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@drawable/iv_mask"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_close_mask"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="@+id/iv_close_mask"
                        app:layout_constraintStart_toStartOf="@+id/iv_close_mask"
                        app:layout_constraintTop_toTopOf="@+id/iv_close_mask" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_close_mask"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="40dp"
                        android:src="@drawable/iv_close"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/iv_close"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/iv_model"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@drawable/iv_sunglasses"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_close"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="@id/iv_close"
                        app:layout_constraintStart_toStartOf="@+id/iv_close"
                        app:layout_constraintTop_toTopOf="@id/iv_close" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_close"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/iv_close"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_close_mask"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/iv_close_mask" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/round_bg_grey"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_panduan">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_encrypred"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_encrypted" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/personal_attenntion"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_encrypred"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_encrypred"
                    app:layout_constraintTop_toTopOf="@+id/iv_encrypred" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verifikasi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_orange"
                android:includeFontPadding="false"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/start_verification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back" />

</androidx.constraintlayout.widget.ConstraintLayout>